[project]
name = "lask"
version = "0.1.6"
description = "Ask your llm from the command line"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Open Source Lodge"}
]
dependencies = ["requests>=2.32.3", "setuptools>=80.8.0"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/Open-Source-Lodge/lask"
Repository = "https://github.com/Open-Source-Lodge/lask"
Documentation = "https://github.com/Open-Source-Lodge/lask"
Issue = "https://github.com/Open-Source-Lodge/lask/issues"
Changelog = "https://github.com/Open-Source-Lodge/lask/releases"

[project.scripts]
lask = "lask:main"

[project.optional-dependencies]
aws = ["boto3>=1.28.0"]
all = ["boto3>=1.28.0"]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
