[metadata]
name = lask
version = 0.1
description = A CLI tool to prompt ChatGPT and others from the terminal
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
install_requires =
    requests

[options.entry_points]
console_scripts =
    lask = lask:main

[options.packages.find]
include = src*
